--- a/app/src/main/res/layout/fragment_expensetracker.xml
+++ b/app/src/main/res/layout/fragment_expensetracker.xml
@@ -21,7 +21,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.841" />
 
     <TextView
         android:id="@+id/textView4"
@@ -35,46 +35,22 @@
         android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/spinner_expensetype"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.161"
+        app:layout_constraintHorizontal_bias="0.168"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_exptype"
-        android:layout_width="300dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:textColorHint="@color/colorAccent"
-        android:visibility="visible"
-        app:boxStrokeColor="@color/colorGrey"
-        app:layout_constraintBottom_toTopOf="@+id/til_expamount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_expendituresubtype"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="what did you spend on?"
-            android:textColor="@color/colorGrey"
-            android:textColorHint="@color/colorAccent" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintVertical_bias="0.645" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/til_expamount"
         android:layout_width="300dp"
         android:layout_height="88dp"
-        android:textColorHint="@color/colorAccent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="100dp"
+        android:textColorHint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btn_expendituredone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -82,25 +58,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="how much?"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textColor="@color/colorGrey"
             android:textColorHint="@color/colorAccent" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Spinner
         android:id="@+id/spinner_expensetype"
-        android:layout_width="299dp"
+        android:layout_width="298dp"
         android:layout_height="54dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/colorAccent"
         android:elevation="10dp"
         android:theme="@style/AlertDialog.AppCompat"
         android:touchscreenBlocksFocus="true"
-        app:layout_constraintBottom_toTopOf="@+id/til_exptype"
+        app:layout_constraintBottom_toTopOf="@+id/til_expamount"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
